test/Fail/SmartRewriteFromConstructor.err
SmartRewriteFromConstructor.agda:12.1-25: warning: -W[no]RewriteLHSNotNeutral
_ : true ≡ w  is not a legal rewrite rule, since the left-hand side
of a rewrite rule introduced by with/rewrite is not neutral
when checking that the clause foo b p rewrite p = refl has type
(b : Bool) → true ≡ not b → not true ≡ not (not b)

SmartRewriteFromConstructor.agda:12.1-8: error: [SplitError.UnificationStuck]
I'm not sure if there should be a case for the constructor refl,
because I get stuck when trying to solve the following unification
problems (inferred index ≟ expected index):
  true ≟ not b
when checking that the pattern refl has type true ≡ not b
